# toxic_spokes

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
examples/CAN/: can.cpp  can_fd.cpp
examples/IP/: tcp_basic.cpp  udp_basic.cpp
examples/Serial/: uart.cpp
src/toxic_spokes/CAN/: CAN_Socket.hpp
src/toxic_spokes/IP/: Socket.hpp
src/toxic_spokes/Serial/: Serial.cpp  Serial.hpp
src/toxic_spokes/UNIX/: UNIX_Socket.hpp
src/toxic_spokes/detail/: FileDescriptor.hpp  IPAddress.hpp  ScopeGuard.hpp  Socket_Impl.hpp  Socket_Impl.inl  chrono_helper.hpp  com_common.hpp  raise.hpp  socket_common.hpp  system_call_helper.hpp
